// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionTableCell matches snapshot (checked) 1`] = `
<SelectionTableCell
  dataKey="string"
  dataRow={
    Object {
      "string": "foobar",
    }
  }
  selectOnChange={[MockFunction]}
  selectedRowIds={
    Array [
      "foobar",
    ]
  }
  width={1}
>
  <ForwardRef(TableCell)
    flexGrow={1}
    justifyContent="center"
  >
    <ForwardRef(Pane)
      alignItems="center"
      boxSizing="border-box"
      className="css-saeo60"
      display="flex"
      flex={1}
      flexGrow={1}
      flexShrink={0}
      justifyContent="center"
      onKeyDown={[Function]}
      overflow="hidden"
      paddingX={12}
    >
      <Box
        alignItems="center"
        boxSizing="border-box"
        className="css-saeo60 css-nil"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        is="div"
        justifyContent="center"
        onKeyDown={[Function]}
        overflow="hidden"
        paddingX={12}
      >
        <div
          className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_hidden ub-ovflw-y_hidden ub-just-cnt_center ub-flx-grow_1"
          onKeyDown={[Function]}
        >
          <ForwardRef(Checkbox)
            checked={true}
            onChange={[Function]}
          >
            <Box
              boxSizing="border-box"
              cursor="pointer"
              display="flex"
              is="label"
              marginY={16}
              position="relative"
            >
              <label
                className="ub-crsr_pointer ub-pst_relative ub-dspl_flex ub-mb_16px ub-mt_16px ub-box-szg_border-box"
              >
                <Box
                  boxSizing="border-box"
                  checked={true}
                  className="css-1bkiqpw"
                  is="input"
                  onChange={[Function]}
                  type="checkbox"
                >
                  <input
                    checked={true}
                    className="css-1bkiqpw ub-box-szg_border-box"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </Box>
                <Box
                  alignItems="center"
                  borderRadius={3}
                  boxSizing="border-box"
                  display="flex"
                  flex="none"
                  height={16}
                  is="div"
                  justifyContent="center"
                  width={16}
                >
                  <div
                    className="ub-box-szg_border-box ub-bblr_3px ub-bbrr_3px ub-btlr_3px ub-btrr_3px ub-dspl_flex ub-flx_none ub-algn-itms_center ub-just-cnt_center ub-w_16px ub-h_16px"
                  >
                    <CheckIcon>
                      <svg
                        height={7}
                        viewBox="0 0 10 7"
                        width={10}
                      >
                        <path
                          d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
                          fill="currentColor"
                          fillRule="evenodd"
                        />
                      </svg>
                    </CheckIcon>
                  </div>
                </Box>
              </label>
            </Box>
          </ForwardRef(Checkbox)>
        </div>
      </Box>
    </ForwardRef(Pane)>
  </ForwardRef(TableCell)>
</SelectionTableCell>
`;

exports[`SelectionTableCell matches snapshot (unchecked) 1`] = `
<SelectionTableCell
  dataKey="string"
  dataRow={
    Object {
      "string": "foobar",
    }
  }
  selectOnChange={[MockFunction]}
  selectedRowIds={Array []}
  width={1}
>
  <ForwardRef(TableCell)
    flexGrow={1}
    justifyContent="center"
  >
    <ForwardRef(Pane)
      alignItems="center"
      boxSizing="border-box"
      className="css-saeo60"
      display="flex"
      flex={1}
      flexGrow={1}
      flexShrink={0}
      justifyContent="center"
      onKeyDown={[Function]}
      overflow="hidden"
      paddingX={12}
    >
      <Box
        alignItems="center"
        boxSizing="border-box"
        className="css-saeo60 css-nil"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        is="div"
        justifyContent="center"
        onKeyDown={[Function]}
        overflow="hidden"
        paddingX={12}
      >
        <div
          className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_hidden ub-ovflw-y_hidden ub-just-cnt_center ub-flx-grow_1"
          onKeyDown={[Function]}
        >
          <ForwardRef(Checkbox)
            checked={false}
            onChange={[Function]}
          >
            <Box
              boxSizing="border-box"
              cursor="pointer"
              display="flex"
              is="label"
              marginY={16}
              position="relative"
            >
              <label
                className="ub-crsr_pointer ub-pst_relative ub-dspl_flex ub-mb_16px ub-mt_16px ub-box-szg_border-box"
              >
                <Box
                  boxSizing="border-box"
                  checked={false}
                  className="css-1bkiqpw"
                  is="input"
                  onChange={[Function]}
                  type="checkbox"
                >
                  <input
                    checked={false}
                    className="css-1bkiqpw ub-box-szg_border-box"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </Box>
                <Box
                  alignItems="center"
                  borderRadius={3}
                  boxSizing="border-box"
                  display="flex"
                  flex="none"
                  height={16}
                  is="div"
                  justifyContent="center"
                  width={16}
                >
                  <div
                    className="ub-box-szg_border-box ub-bblr_3px ub-bbrr_3px ub-btlr_3px ub-btrr_3px ub-dspl_flex ub-flx_none ub-algn-itms_center ub-just-cnt_center ub-w_16px ub-h_16px"
                  >
                    <CheckIcon>
                      <svg
                        height={7}
                        viewBox="0 0 10 7"
                        width={10}
                      >
                        <path
                          d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
                          fill="currentColor"
                          fillRule="evenodd"
                        />
                      </svg>
                    </CheckIcon>
                  </div>
                </Box>
              </label>
            </Box>
          </ForwardRef(Checkbox)>
        </div>
      </Box>
    </ForwardRef(Pane)>
  </ForwardRef(TableCell)>
</SelectionTableCell>
`;
